--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/monitor-telemetry-postcard-policy.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/monitor-telemetry-postcard-policy.j2
@@ -18,9 +18,11 @@ monitor telemetry postcard policy
    ingress sample tcp-udp-checksum value {{ monitor_telemetry_postcard_policy.ingress.sample.tcp_udp_checksum.value }} mask {{ monitor_telemetry_postcard_policy.ingress.sample.tcp_udp_checksum.mask }}
 {%     endif %}
 {%     if monitor_telemetry_postcard_policy.marker_vxlan.enabled is arista.avd.defined(true) %}
-   marker vxlan
-{%     elif monitor_telemetry_postcard_policy.marker_vxlan.header_word_zero_bit is arista.avd.defined %}
-   marker vxlan header word 0 bit {{ monitor_telemetry_postcard_policy.marker_vxlan.header_word_zero_bit }}
+{%         set marker_cli = "marker vxlan" %}
+{%         if monitor_telemetry_postcard_policy.marker_vxlan.header_word_zero_bit is arista.avd.defined %}
+{%             set marker_cli = marker_cli ~ " header word 0 bit " ~ monitor_telemetry_postcard_policy.marker_vxlan.header_word_zero_bit %}
+{%         endif %}
+   {{ marker_cli }}
 {%     endif %}
 {%     if monitor_telemetry_postcard_policy.ingress.collection.source is arista.avd.defined and monitor_telemetry_postcard_policy.ingress.collection.destination is arista.avd.defined %}
 {%         set ingress_cli = "ingress collection gre source " ~ monitor_telemetry_postcard_policy.ingress.collection.source ~ " destination " ~ monitor_telemetry_postcard_policy.ingress.collection.destination %}
