--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/dot1x.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/dot1x.j2
@@ -80,14 +80,7 @@
 | Profile | EAP Method | Identity | SSL Profile |
 | ------- | ---------- | -------- | ----------- |
 {%                 for profile in dot1x.supplicant.profiles | arista.avd.natural_sort("name") %}
-{%                     set profile_name = profile.name %}
-{%                     if profile.identity is arista.avd.defined %}
-{%                         set identity = profile.identity %}
-{%                     endif %}
-{%                     if profile.eap_method is arista.avd.defined %}
-{%                         set eap_method = profile.eap_method %}
-{%                     endif %}
-| {{ profile_name }} | {{ eap_method | arista.avd.default("-") }} | {{ identity | arista.avd.default("-") }} | {{ ssl_profile | arista.avd.default("-") }} |
+| {{ profile.name }} | {{ profile.eap_method | arista.avd.default("-") }} | {{ profile.identity | arista.avd.default("-") }} | {{ profile.ssl_profile | arista.avd.default("-") }} |
 {%                 endfor %}
 {%             endif %}
 {%         endif %}
