--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/arp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/arp.j2
@@ -4,17 +4,16 @@
  that can be found in the LICENSE file.
 #}
 {# doc - arp #}
-{% if arp.aging.timeout_default is arista.avd.defined or arp.static_entries is arista.avd.defined or arp.cache_persistent is arista.avd.defined or
-    arp.persistent_refresh_delay is arista.avd.defined %}
+{% if arp.aging.timeout_default is arista.avd.defined or arp.static_entries is arista.avd.defined or arp.persistent is arista.avd.defined %}
 
 ### ARP
-{%     if arp.cache_persistent is arista.avd.defined(true) %}
+{%     if arp.persistent.enabled is arista.avd.defined(true) %}
+{%         set persistent_doc = "ARP cache persistency is enabled." %}
+{%         if arp.persistent.refresh_delay is arista.avd.defined %}
+{%             set persistent_doc = persistent_doc ~ " The refresh-delay is " ~ arp.persistent.refresh_delay ~ " seconds after reboot." %}
+{%         endif %}
 
-ARP cache persistency is enabled.
-{%     endif %}
-{%     if arp.persistent_refresh_delay is arista.avd.defined() %}
-
-ARP cache is refresh delay is {{ arp.persistent_refresh_delay }} seconds after reboot.
+{{ persistent_doc }}
 {%     endif %}
 {%     if arp.aging.timeout_default is arista.avd.defined %}
 
